--- a/models/staging/stripe/_stripe__sources.yml
+++ b/models/staging/stripe/_stripe__sources.yml
@@ -6,6 +6,11 @@ sources:
     schema: stripe  
     tables:
       - name: payment
+        columns:
+          - name: id
+            tests:
+              - not_null
+              - unique
         loaded_at_field: _batched_at
         freshness: 
           warn_after:
